WIP: multiple articles and refactoring
