# docs/swagger.json
@@ -7,14 +7,14 @@
     },
     "host": "localhost:8000",
     "paths": {
-        "/api/v1/article/{record_id}": {
-            "get": {
+        "/api/v1/article/alternative": {
+            "post": {
                 "security": [
                     {
                         "Bearer": []
                     }
                 ],
-                "description": "Get article for record by record_id",
+                "description": "Create alternative article for record by record_id",
                 "consumes": [
                     "application/json"
                 ],
@@ -24,7 +24,196 @@
                 "tags": [
                     "article"
                 ],
-                "summary": "Get article",
+                "summary": "Create alternative article",
+                "parameters": [
+                    {
+                        "description": "Article info for create",
+                        "name": "article",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ArticleCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Article created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Article not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/article/{record_id}/all": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get articles for record by record_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "article"
+                ],
+                "summary": "Get articles",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Record id",
+                        "name": "record_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ArticleDto"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Articles not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/article/{record_id}/is_main": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Set is_main for article by record_id and article_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "article"
+                ],
+                "summary": "Set is_main",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Record id",
+                        "name": "record_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article id",
+                        "name": "article_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Article set as main",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Article not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/article/{record_id}/main": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get main article for record by record_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "article"
+                ],
+                "summary": "Get main article",
                 "parameters": [
                     {
                         "type": "integer",
@@ -43,6 +232,12 @@
                     },
                     "404": {
                         "description": "Article not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity",
                         "schema": {
                             "type": "string"
                         }
@@ -96,6 +291,12 @@
                     },
                     "400": {
                         "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity",
                         "schema": {
                             "type": "string"
                         }
@@ -258,6 +459,12 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -344,10 +551,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "204": {
+                        "description": "Record published",
                         "schema": {
-                            "$ref": "#/definitions/models.RecordDto"
+                            "type": "string"
                         }
                     },
                     "404": {
@@ -459,13 +666,33 @@
         }
     },
     "definitions": {
+        "models.ArticleCreate": {
+            "description": "Article create model",
+            "type": "object",
+            "required": [
+                "body",
+                "record_id"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string",
+                    "format": "html",
+                    "example": "{html page}"
+                },
+                "record_id": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
         "models.ArticleDto": {
             "description": "Article dto model",
             "type": "object",
             "required": [
                 "body",
                 "created_at",
-                "id"
+                "id",
+                "is_main"
             ],
             "properties": {
                 "body": {
@@ -480,6 +707,10 @@
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "is_main": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         },
